--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "number_helpers": "^0.1.1",
     "proptypes": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
