--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,28 @@
   "extends": [
     "airbnb",
     "airbnb/hooks"
-  ]
+  ],
+  "rules": {
+    "no-console": 0,
+    "func-names": 0,
+    "import/prefer-default-export": 0,
+    "consistent-return": 0,
+    "react/prop-types": 0,
+    "import/imports-first": [
+      "error",
+      "absolute-first"
+    ],
+    "import/newline-after-import": "error",
+    "jsx-a11y/click-events-have-key-events": 0,
+    "react/no-array-index-key": 0,
+    "react/forbid-prop-types": 0,
+    "no-nested-ternary": 0,
+    "camelcase": 0,
+    "jsx-a11y/tabindex-no-positive": 0,
+    "jsx-a11y/no-static-element-interactions": 0
+  },
+  "globals": {
+    "document": true
+  },
+  "parser": "babel-eslint"
 }
