--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "number_helpers": "^0.1.1",
-    "proptypes": "^1.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
